Finished optimization for nodes.